Fixed gunicorn worker hang

--- a/Web/EvenTotalSecureLogin/nottobeseen/docker-compose.yml
+++ b/Web/EvenTotalSecureLogin/nottobeseen/docker-compose.yml
@@ -8,4 +8,4 @@ services:
             - 555:8000
         volumes: 
             - .:/app
-        command: bash -c "gunicorn --bind 0.0.0.0:8000 wsgi:app"
+        command: bash -c "gunicorn --worker-tmp-dir /dev/shm --workers=2 --threads=4 --worker-class=gthread --bind 0.0.0.0:8000 wsgi:app"
