--- a/Web/EvenTotalSecureLogin/nottobeseen/Dockerfile
+++ b/Web/EvenTotalSecureLogin/nottobeseen/Dockerfile
@@ -5,8 +5,7 @@ RUN mkdir /app
 WORKDIR /app
 COPY . /app
 
-RUN apt update &&  apt-get install libffi-dev build-essential libssl-dev python3-dev -y
-RUN apt install python3-pip -y
+RUN apt update &&  apt-get install libffi-dev build-essential libssl-dev python3-dev python3-pip -y
 
 RUN pip3 install -r requirements.txt
-RUN apt install ssh -y
+
